--- a/bluestyle.css
+++ b/bluestyle.css
@@ -2,7 +2,11 @@ body {
     background-color: lightblue;
     }
     
-    h1 {
+h1 {
     color: navy;
     margin-left: 20px;
-    } 
+}
+img {
+    width: 50px;
+    height: 500px;
+}
